<resources>
    <string name="app_name">Custom</string>
    <string name="idLeague">ID:</string>
    <string name="sport">Sport</string>
    <string name="register">Sign up</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logInText">Have an Account? Log In</string>
    <string name="fullName">Full Name</string>
    <string name="league_name">League Name</string>
    <string name="leagues">Leagues</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strLeague">League</string>
    <string name="strSport">Sport</string>
    <string name="strBadge">League Badge</string>
    <string name="strCurrentSeason">Current Season</string>
    <string name="intFormedYear">Year Formed</string>
    <string name="strDivision">Division</string>
    <string name="strDescriptionEN">Description</string>
    <string name="strFacebook">Facebook</string>
    <string name="strTwitter">Twitter</string>
    <string name="strYoutube">Youtube</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_create_account">Don\'t have account? Create Account</string>
    <string name="logIn">Login</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="leagues_in_country">Leagues in country</string>
    <string name="strWebsite">Website</string>
    <string name="no_item_found_layout">No League with given name found. "\n" Try searching with the full country name.</string>
    <string name="user_profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="displayName">Display Name</string>
    <string name="camera_permissions">Can\'t launch camera without permissions.</string>
    <string name="saved_leagues">Favourite Leagues</string>
    <string name="Add_Leagues">Add Leagues</string>
</resources>
