<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchView"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/userProfile"
        android:icon="@drawable/ic_account_box_white_24dp"
        android:title="@string/user_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/userSettings"
        android:icon="@drawable/ic_settings_applications_white_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>