<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/blueGrey900">

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold|normal" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding16dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:background="@color/blueGrey900"
            android:padding="@dimen/linearPadding"
            android:scrollbarAlwaysDrawVerticalTrack="true">


            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:background="@color/whiteTheme"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:hint="@string/full_name"
                android:textStyle="italic">

            </EditText>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:background="@color/whiteTheme"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:hint="@string/email"
                android:textStyle="italic">

            </EditText>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:background="@color/whiteTheme"
                android:inputType="phone"
                android:textColor="@android:color/black"
                android:hint="@string/phone"
                android:textStyle="italic">

            </EditText>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:background="@color/whiteTheme"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:hint="@string/password"
                android:textStyle="italic">

            </EditText>

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:background="@color/whiteTheme"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:hint="@string/confirm_password"
                android:textStyle="italic">

            </EditText>

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/buttonMargin"
                android:background="@color/blueGrey500"
                android:padding="@dimen/linearPadding"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/log_in_text_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/buttonMargin"
                android:background="@android:color/transparent"
                android:text="@string/logInText"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>