<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blueGrey900"
    android:layout_margin="1dp"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/strLeague"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="2"
            android:padding="@dimen/fragHeaderPadding"
            android:text="@string/strLeague"
            android:textColor="@android:color/white"
            android:textSize="@dimen/headerDimens"
            android:background="@color/dullBlack"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/dullBlack"
            android:weightSum="2">

            <TextView
                android:id="@+id/idLeague"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/idLeague"
                android:textColor="@android:color/white"
                android:textSize="@dimen/smallDimens"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/strSport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/strSport"
                android:textColor="@android:color/white"
                android:textSize="@dimen/smallDimens"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <FrameLayout
                android:id="@+id/strBadgeFrame"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/strBadge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/strBadge"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding8dp"
                    android:src="@drawable/common_full_open_on_phone" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/strCurrentSeason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/padding4dp"
                    android:singleLine="true"
                    android:text="@string/strCurrentSeason"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/smallDimens"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/intFormedYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/padding4dp"
                    android:singleLine="true"
                    android:text="@string/intFormedYear"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/smallDimens"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/strDivision"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/padding4dp"
                    android:singleLine="true"
                    android:text="@string/strDivision"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/smallDimens"
                    android:textStyle="normal" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/strDescriptionEN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:paddingStart="@dimen/padding16dp"
                android:paddingTop="@dimen/padding4dp"
                android:paddingEnd="@dimen/padding16dp"
                android:paddingBottom="@dimen/padding4dp"
                android:text="@string/strDescriptionEN"
                android:textColor="@android:color/white"
                android:maxLines="4"
                android:textSize="@dimen/smallDimens"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/dullBlack"
            android:weightSum="2">

            <ImageView
                android:id="@+id/strFavourite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding16dp"
                android:src="@drawable/ic_favorite_border_white_48dp" />

            <TextView
                android:id="@+id/strWebsite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding16dp"
                android:singleLine="true"
                android:text="@string/strWebsite"
                android:textColor="@android:color/white"
                android:textSize="@dimen/smallDimens"
                android:textStyle="normal" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>