<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blueGrey900"
    tools:context=".ui.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/padding16dp">

        <TextView
            android:id="@+id/login_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding8dp"
            android:gravity="center"
            android:padding="@dimen/padding16dp"
            android:text="@string/logIn"
            android:textColor="@color/whiteTheme"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/padding4dp"
                android:background="@color/whiteTheme"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="@dimen/padding16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/padding4dp"
                android:background="@color/whiteTheme"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/padding16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:background="@color/darkerDark"
            android:padding="@dimen/padding16dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/whiteTheme"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding8dp"
            android:gravity="center"
            android:padding="@dimen/padding16dp"
            android:text="@string/don_t_have_account_create_account"
            android:textColor="@color/whiteTheme"
            android:textSize="16sp"
            android:textStyle="bold|italic" />


    </LinearLayout>

</RelativeLayout>