<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/whiteTheme"
    android:orientation="vertical"
    tools:context=".ui.UserProfileActivity">

    <RelativeLayout
        android:id="@+id/prof_pic"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/blueGrey900">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/padding8dp"
            android:src="@drawable/ic_account_box_white_24dp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/userImage"
            android:includeFontPadding="false"
            android:text="Eric Wanjohi"
            android:textAllCaps="false"
            android:textColor="@color/whiteTheme"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName"
            android:layout_toRightOf="@id/userImage"
            android:includeFontPadding="false"
            android:text="ericwanjohi.ew@gmail.com"
            android:textAllCaps="false"
            android:textColor="@color/whiteTheme"
            android:textSize="14sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lin_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/prof_pic"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@color/whiteTheme"
        android:padding="@dimen/padding16dp">

        <TextView
            android:id="@+id/displayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/displayName"
                android:padding="@dimen/padding16dp"
            android:text="@string/full_name"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/userPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="@dimen/padding16dp"
            android:text="@string/phone"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/userEmailEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding16dp"
                android:singleLine="true"
            android:text="@string/email"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


        <Button
            android:id="@+id/editProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding16dp"
            android:background="@color/darkerDark"
            android:padding="@dimen/padding16dp"
            android:text="Edit Profile"
            android:textAllCaps="false"
            android:textColor="@color/whiteTheme"
            android:textSize="@dimen/buttonTextSize" />

    </LinearLayout>


</RelativeLayout>